# pytomata-marker

./: .gitignore  DEVELOP.md  LICENSE  README.md  automarker.py  configuration.py  configure.py  execute.py  grading.py  pyproject.toml  pyproject.toml.bak  questions.py  requirements.txt  run.py  setup.py  utilities.py
autograding/: __init__.py  autograding.py  invoke.py
domains/ct19/: ct19-assignment1.ipynb
domains/ct19/solution/: 1a6_accepted.txt  1a7_accepted.txt  1b1_rejected.txt  1b4_accepted.txt  2a1_accepted.txt  2a3_accepted.txt  2a4_rejected.txt  3a3_accepted.txt  3b1_rejected.txt  4a1_accepted.txt  4b1_accepted.txt  5a1_accepted.txt  E1-Qa_R_2.jff  E2-Qa2_sol.jff  E2-Qa3_sol.jff  E2-Qa4_sol-WRONG.jff  E3-Qc_M_4.jff  E5-Qa_sol_cross.jff
domains/ct19/submissions/s0000000-perfect/: E1-Qa7-approx.txt  E1-Qb1.txt  E2-Qc1.txt  E3-Qa2.txt  E3-Qa5.jff  E3-Qb2.txt  E4-Qb1.jff
domains/ct19/submissions/s3429922/: E1-Qa2.txt  E1-Qa3.txt  E2-Qa2.txt  E2-Qc1.txt  E3-Qa2.txt  E5-Qa1.txt
output/: output.md  output.txt
pytomata/: __init__.py  __main__.py  __version__.py  elements.py  pytomata.py  slogger.py  utils.py
pytomata/lib/: __init__.py  base.py  configuration.py  regex.py  regular_expressions.py
references/: automarker.py  config.py
tests/: questions-ct-2019.py  questions.py
tests/ct17/: questions.py
tests/ct17 copy/: questions.py
tests/ct17/submissions/: s0000002.py
tests/ct19/: questions.py  questions_val.py
tests/ct19/ct19-jflap/: ct19-assignment1.ipynb  marking-errors.csv  marks.csv
tests/ct19/ct19-jflap/solution/: 1a6_rejected.txt  1a7_rejected.txt  1b1_accepted.txt  1b3_accepted.txt  1b3_rejected.txt  1b4_rejected.txt  2a1_rejected.txt  (+32 more)
tests/ct19/submissions/: s0000000.py  s0000001.py  s0000002.py  s0000003.py
tests/student-files/: s0000001.py  s0000002.py
tests/submissions/: s0000001.py  s0000002.py
(+50 files in other folders)
